App data models/service added

--- a/michieloppenheimer.io/appsettings.json
+++ b/michieloppenheimer.io/appsettings.json
@@ -1,4 +1,24 @@
 {
+  "ConnectionStrings": {
+    "BlogContextString": "Server=(localdb)\\mssqllocaldb;Database=MichielOppenheimerBlog;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "UserConfig": {
+    "username": "",
+    // Generate a new password hash with salt here https://onlinehasher.azurewebsites.net/
+    "password": "",
+    "salt": ""
+  },
+  "webOptimizer": {
+    "enableCaching": true
+  },
+  "blog": {
+    "owner": "Michiel Oppenheimer",
+    "postsPerPage": 6,
+    "commentsCloseAfterDays": 90
+  },
+  "cdn": {
+    "url": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
